# envlens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  envlens-srs.md
.github/workflows/: ci.yml  release.yml
docs/: demo.tape
docs/superpowers/plans/: 2026-07-05-envlens.md
docs/superpowers/specs/: 2026-07-05-envlens-design.md
src/: cli.rs  config.rs  diff.rs  git.rs  lib.rs  main.rs  sync.rs
src/core/: diagnostics.rs  mod.rs  model.rs  resolve.rs  scanner.rs  secrets.rs
src/core/parsers/: ci.rs  compose.rs  direnv.rs  dockerfile.rs  dotenv.rs  mod.rs  package_json.rs  process.rs
src/report/: json.rs  markdown.rs  mod.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/views/: details.rs  help.rs  mod.rs  modals.rs  sources.rs  variables.rs
tests/: cli.rs  property.rs  tui.rs
tests/fixtures/basic/: .env  .env.example  .env.local
tests/fixtures/ci/: .gitlab-ci.yml
tests/snapshots/: cli__check_human_output_readable.snap  cli__check_json_is_valid_and_stable.snap  cli__report_markdown_golden.snap  cli__report_no_values_markdown.snap  tui__ascii_no_color_mode.snap  tui__details_expanded.snap  tui__details_secret_masked.snap  tui__details_secret_revealed.snap  tui__details_unresolved_annotation.snap  tui__empty_project.snap  tui__filter_conflicts.snap  tui__filter_missing.snap  tui__filter_secrets.snap  tui__filter_warnings.snap  tui__help_overlay.snap  tui__initial_render_basic.snap  tui__manifest_source_details.snap  tui__narrow_terminal_80x24.snap  tui__search_active.snap  tui__source_parse_error_badge.snap
(+23 files in other folders)
