[package]
name = "envlens"
version = "0.1.0"
edition = "2024"
description = "TUI to inspect, compare, and debug environment variables across .env files, Docker Compose, package scripts, and your shell"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EricGrill/envlens"
categories = ["command-line-utilities", "development-tools"]
keywords = ["dotenv", "environment", "tui", "env"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ignore = "0.4.27"
ratatui = "0.30.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
unicode-width = "0.2.2"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.48.0"
predicates = "3.1.4"
tempfile = "3.27.0"
